# texlab

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  biome.json  index.html  package-lock.json  package.json  skills-lock.json  ui-design
.claude/commands/: speckit.review.code.md  speckit.review.comments.md  speckit.review.errors.md  speckit.review.md  speckit.review.simplify.md  speckit.review.tests.md  speckit.review.types.md  speckit.specify.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: pre-commit
.specify/: extension-catalogs.yml  extensions.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md
biome-plugins/: no-style-literals.grit
specs/001-project-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-core-domain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tool-system/: data-model.md  plan.md  research.md  (+3 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: dto.rs  history_commands.rs  layer_commands.rs  layout_commands.rs  mod.rs  palette_commands.rs  state_commands.rs  texture_commands.rs  tool_commands.rs
src-tauri/src/domain/: blend.rs  color.rs  error.rs  layer.rs  layer_stack.rs  mod.rs  palette.rs  pixel_buffer.rs  ports.rs  selection.rs  texture.rs  undo.rs
src-tauri/src/domain/tools/: brush.rs  color_picker.rs  eraser.rs  fill.rs  line.rs  mod.rs  selection_tool.rs
src-tauri/src/infrastructure/: mod.rs  palette_file.rs  palette_state_io.rs  palette_store_fs.rs  png_reader.rs  png_writer.rs  workspace_io.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/use_cases/: editor_service.rs  mod.rs  palette_service.rs
src-tauri/tests/fixtures/: palette_malformed.texpal  palette_valid.texpal  palette_wrong_version.texpal
(+203 files in other folders)
