[package]
name = "texture-lab"
version = "0.1.0"
description = "Pixel art texture editor for Minecraft resource packs"
authors = ["you"]
edition = "2021"
rust-version = "1.77"
default-run = "texture-lab"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "texture-lab"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
