[package]
name = "texlab"
version = "0.1.0"
description = "Pixel art texture editor for Minecraft resource packs"
authors = ["payangar-dev <payangar.dev@gmail.com>"]
edition = "2021"
rust-version = "1.77"
default-run = "texlab"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "texlab"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
uuid = { version = "1", features = ["v4"] }
